--- a/pllenge.html
+++ b/pllenge.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pllenge</title>
+    <title>9월 플린지 현황</title>
+    <link
+    rel="shortcut icon"
+    sizes="16x16 32x32 64x64"
+    href="https://k.kakaocdn.net/dn/JHCJ6/btraDzrEvO7/DTF3PHf45AnKAw44WhHvC1/img_xl.jpg"/>
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
