--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="kr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>9월 플린지 현황</title>
-    <link
-    rel="shortcut icon"
-    sizes="16x16 32x32 64x64"
-    href="https://k.kakaocdn.net/dn/JHCJ6/btraDzrEvO7/DTF3PHf45AnKAw44WhHvC1/img_xl.jpg"/>
+    <link rel="shortcut icon" sizes="16x16 32x32 64x64"
+        href="https://k.kakaocdn.net/dn/JHCJ6/btraDzrEvO7/DTF3PHf45AnKAw44WhHvC1/img_xl.jpg" />
     <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
     <div class="top">
-        <h2>9월 플린지 현황</h2>
+        <h1>9월 플린지 현황</h1>
+        <span>1등에게 10만원 상당의 보상이 주어지는 9월 플린지, 과연 승자는?!</span>
+        <span>현재 5명이 참여하고 있어요! 친구들에게 더 널리널리 알려 함께 지구를 구해보아요!</span>
+        <div class="banner">
+            <a href="https://pf.kakao.com/_ExixoJs"><button id="kakao">플린지 참여하러 바로가기</button></a>
+            <a href="https://www.instagram.com/pllenge_official/"><button id="instagram">플린지 인스타그램 구경하러가기</button></a>
+        </div>
     </div>
     <div class="player">
         <div class="status">
@@ -23,7 +29,7 @@
             </div>
         </div>
         <div class="avatar">
-            <img class="avatar-pic" src="https://image.flaticon.com/icons/png/512/92/92767.png"/>
+            <img class="avatar-pic" src="https://image.flaticon.com/icons/png/512/92/92767.png" />
         </div>
     </div>
     <div class="player">
@@ -34,7 +40,7 @@
             </div>
         </div>
         <div class="avatar">
-            <img class="avatar-pic" src="https://image.flaticon.com/icons/png/512/92/92767.png"/>
+            <img class="avatar-pic" src="https://image.flaticon.com/icons/png/512/92/92767.png" />
         </div>
     </div>
     <div class="player">
@@ -45,9 +51,10 @@
             </div>
         </div>
         <div class="avatar">
-            <img class="avatar-pic" src="https://image.flaticon.com/icons/png/512/92/92767.png"/>
+            <img class="avatar-pic" src="https://image.flaticon.com/icons/png/512/92/92767.png" />
         </div>
     </div>
+
     <div class="player">
         <div class="status">
             <div class="status-bar" id="허나원">
@@ -56,7 +63,7 @@
             </div>
         </div>
         <div class="avatar">
-            <img class="avatar-pic" src="https://image.flaticon.com/icons/png/512/92/92767.png"/>
+            <img class="avatar-pic" src="https://image.flaticon.com/icons/png/512/92/92767.png" />
         </div>
     </div>
     <div class="player">
@@ -67,9 +74,10 @@
             </div>
         </div>
         <div class="avatar">
-            <img class="avatar-pic" src="https://image.flaticon.com/icons/png/512/92/92767.png"/>
-            <img class="crown" src="https://image.flaticon.com/icons/png/512/891/891024.png"/>
+            <img class="avatar-pic" src="https://image.flaticon.com/icons/png/512/92/92767.png" />
+            <img class="crown" src="https://image.flaticon.com/icons/png/512/891/891024.png" />
         </div>
     </div>
 </body>
+
 </html>
