--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <h1>👾 9월 플린지 현황 👾</h1>
         <span>1등에게 10만원 상당의 보상이 주어지는 9월 플린지, 과연 승자는?!</span>
         <span id="current-players"></span>
+        <span id="explanation">(플라스틱 제품들을 클릭해보세요!)</span>
         <div class="clock">
             <h3 id="countdown"></h3>
         </div>
@@ -24,22 +25,22 @@
             <a href="https://www.instagram.com/pllenge_official/"><button id="instagram">플린지 인스타그램 구경하러가기</button></a>
         </div>
     </div>
-    <div>
-        <img class="plastic" id="p1" src="https://image.flaticon.com/icons/png/512/3456/3456547.png"/>
-        <img class="plastic" id="p2" src="https://image.flaticon.com/icons/png/512/3456/3456466.png"/>
-        <img class="plastic" id="p3" src="https://image.flaticon.com/icons/png/512/3456/3456533.png"/>
-        <img class="plastic" id="p4" src="https://image.flaticon.com/icons/png/512/2367/2367602.png"/>
-        <img class="plastic" id="p5" src="https://image.flaticon.com/icons/png/512/2367/2367586.png"/>
+    <div class="plastic">
+        <img id="p1" src="https://image.flaticon.com/icons/png/512/3456/3456547.png"/>
+        <img id="p2" src="https://image.flaticon.com/icons/png/512/3456/3456466.png"/>
+        <img id="p3" src="https://image.flaticon.com/icons/png/512/3456/3456533.png"/>
+        <img id="p4" src="https://image.flaticon.com/icons/png/512/2367/2367602.png"/>
+        <img id="p5" src="https://image.flaticon.com/icons/png/512/2367/2367586.png"/>
     </div>
     <div class="player">
         <div class="status">
             <div class="status-bar" id="심혜준">
                 <span>심혜준님</span>
-                <span>10회</span>
+                <span>10회 🥈</span>
             </div>
         </div>
         <div class="avatar">
-            <img class="avatar-pic" src=chosenIcon/>
+            <img class="avatar-pic"/>
         </div>
     </div>
     <div class="player">
@@ -50,18 +51,18 @@
             </div>
         </div>
         <div class="avatar">
-            <img class="avatar-pic" src="https://image.flaticon.com/icons/png/512/92/92767.png" />
+            <img class="avatar-pic"/>
         </div>
     </div>
     <div class="player">
         <div class="status">
             <div class="status-bar" id="홍수민">
                 <span>홍수민님</span>
-                <span>7회</span>
+                <span>7회 🥉</span>
             </div>
         </div>
         <div class="avatar">
-            <img class="avatar-pic" src="https://image.flaticon.com/icons/png/512/92/92767.png" />
+            <img class="avatar-pic"/>
         </div>
     </div>
 
@@ -73,18 +74,18 @@
             </div>
         </div>
         <div class="avatar">
-            <img class="avatar-pic" src="https://image.flaticon.com/icons/png/512/92/92767.png" />
+            <img class="avatar-pic"/>
         </div>
     </div>
     <div class="player">
         <div class="status">
             <div class="status-bar" id="문호정">
                 <span>문호정님</span>
-                <span>11회</span>
+                <span>11회 🥇</span>
             </div>
         </div>
         <div class="avatar">
-            <img class="avatar-pic" src="https://image.flaticon.com/icons/png/512/92/92767.png" />
+            <img class="avatar-pic"/>
             <img class="crown" src="https://image.flaticon.com/icons/png/512/891/891024.png" />
         </div>
     </div>
