--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <img id="p4" src="https://image.flaticon.com/icons/png/512/2367/2367602.png"/>
         <img id="p5" src="https://image.flaticon.com/icons/png/512/2367/2367586.png"/>
     </div>
-    <div class="player">
+    <!-- <div class="player">
         <div class="status">
             <div class="status-bar" id="심혜준">
                 <span>심혜준님</span>
@@ -88,7 +88,7 @@
             <img class="avatar-pic"/>
             <img class="crown" src="https://image.flaticon.com/icons/png/512/891/891024.png" />
         </div>
-    </div>
+    </div> -->
 
     <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>, <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a>, and <a href="https://www.flaticon.com/authors/dinosoftlabs" title="DinosoftLabs">DinosoftLabs</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
     <script src="pllenge.js"></script>
