--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 <body>
     <div class="top">
         <h1>👾 9월 플린지 현황 👾</h1>
-        <span>1등에게 10만원 상당의 보상이 주어지는 9월 플린지, 과연 승자는?!</span>
-        <span id="current-players"></span>
+        <span>아로마티카, 러쉬 등 대표 친환경 브랜드의 제품들에 더해</span>
+        <span>1등에게 자연가습기 러브팟 추가 보상이 주어지는 9월 플린지, 과연 승자는?!</span>
+        <span id="current-players"> </span>
         <span id="explanation">(플라스틱 제품들을 클릭해보세요!)</span>
         <div class="clock">
             <h3 id="countdown"></h3>
@@ -90,7 +91,9 @@
         </div>
     </div> -->
 
-    <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>, <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a>, and <a href="https://www.flaticon.com/authors/dinosoftlabs" title="DinosoftLabs">DinosoftLabs</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+    <div class="copyright">
+        <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>, <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a>, and <a href="https://www.flaticon.com/authors/dinosoftlabs" title="DinosoftLabs">DinosoftLabs</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+    </div>
     <script src="pllenge.js"></script>
 </body>
 
