--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     </div>
     <!-- <div class="player">
         <div class="status">
-            <div class="status-bar" id="심혜준">
-                <span>심혜준님</span>
-                <span>10회 🥈</span>
+            <div class="status-bar" id="*정">
+                <span>*정님</span>
+                <span>1회 🥈</span>
             </div>
         </div>
         <div class="avatar">
@@ -77,19 +77,19 @@
         <div class="avatar">
             <img class="avatar-pic"/>
         </div>
-    </div>
+    </div> -->
     <div class="player">
         <div class="status">
-            <div class="status-bar" id="문호정">
-                <span>문호정님</span>
-                <span>11회 🥇</span>
+            <div class="status-bar" id="ㅎ정">
+                <span>*정님</span>
+                <span>1회 🥇</span>
             </div>
         </div>
         <div class="avatar">
             <img class="avatar-pic"/>
             <img class="crown" src="https://image.flaticon.com/icons/png/512/891/891024.png" />
         </div>
-    </div> -->
+    </div>
 
     <div class="copyright">
         <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>, <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a>, and <a href="https://www.flaticon.com/authors/dinosoftlabs" title="DinosoftLabs">DinosoftLabs</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
