--- a/index.html
+++ b/index.html
@@ -65,18 +65,6 @@
         <div class="avatar">
             <img class="avatar-pic"/>
         </div>
-    </div>
-
-    <div class="player">
-        <div class="status">
-            <div class="status-bar" id="허나원">
-                <span>허나원님</span>
-                <span>2회</span>
-            </div>
-        </div>
-        <div class="avatar">
-            <img class="avatar-pic"/>
-        </div>
     </div> -->
     <div class="player">
         <div class="status">
@@ -90,6 +78,18 @@
             <img class="crown" src="https://image.flaticon.com/icons/png/512/891/891024.png" />
         </div>
     </div>
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="PMH">
+                <span>P*H님</span>
+                <span>1회 🥇</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+            <img class="crown" src="https://image.flaticon.com/icons/png/512/891/891024.png" />
+        </div>
+    </div> 
 
     <div class="copyright">
         <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>, <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a>, and <a href="https://www.flaticon.com/authors/dinosoftlabs" title="DinosoftLabs">DinosoftLabs</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
