--- a/index.html
+++ b/index.html
@@ -33,10 +33,22 @@
         <img id="p4" src="https://image.flaticon.com/icons/png/512/2367/2367602.png"/>
         <img id="p5" src="https://image.flaticon.com/icons/png/512/2367/2367586.png"/>
     </div>
-    <!-- <div class="player">
+    <div class="player">
         <div class="status">
-            <div class="status-bar" id="*정">
+            <div class="status-bar" id="ㅎ정">
                 <span>*정님</span>
+                <span>1회 🥈</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+            <!-- <img class="crown" src="https://image.flaticon.com/icons/png/512/891/891024.png" /> -->
+        </div>
+    </div>
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="PMH">
+                <span>P*H님</span>
                 <span>1회 🥈</span>
             </div>
         </div>
@@ -44,33 +56,11 @@
             <img class="avatar-pic"/>
         </div>
     </div>
-    <div class="player">
+        <div class="player">
         <div class="status">
-            <div class="status-bar" id="손하연">
-                <span>손하연님</span>
-                <span>5회</span>
-            </div>
-        </div>
-        <div class="avatar">
-            <img class="avatar-pic"/>
-        </div>
-    </div>
-    <div class="player">
-        <div class="status">
-            <div class="status-bar" id="홍수민">
-                <span>홍수민님</span>
-                <span>7회 🥉</span>
-            </div>
-        </div>
-        <div class="avatar">
-            <img class="avatar-pic"/>
-        </div>
-    </div> -->
-    <div class="player">
-        <div class="status">
-            <div class="status-bar" id="ㅎ정">
-                <span>*정님</span>
-                <span>1회 🥇</span>
+            <div class="status-bar" id="홍ㅇ주">
+                <span>홍*주님</span>
+                <span>2회 🥇</span>
             </div>
         </div>
         <div class="avatar">
@@ -80,14 +70,36 @@
     </div>
     <div class="player">
         <div class="status">
-            <div class="status-bar" id="PMH">
-                <span>P*H님</span>
-                <span>1회 🥇</span>
+            <div class="status-bar" id="윤ㅅ영">
+                <span>윤*영님</span>
+                <span>2회 🥇</span>
             </div>
         </div>
         <div class="avatar">
             <img class="avatar-pic"/>
             <img class="crown" src="https://image.flaticon.com/icons/png/512/891/891024.png" />
+        </div>
+    </div>
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="ㄷ올">
+                <span>*올님</span>
+                <span>1회 🥈</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="Joyce">
+                <span>Jo*ce님</span>
+                <span>1회 🥈</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
         </div>
     </div> 
 
