--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="status">
             <div class="status-bar" id="ㅎ정">
                 <span>*정님</span>
-                <span>1회 🥈</span>
+                <span>1회</span>
             </div>
         </div>
         <div class="avatar">
@@ -49,7 +49,7 @@
         <div class="status">
             <div class="status-bar" id="PMH">
                 <span>P*H님</span>
-                <span>1회 🥈</span>
+                <span>2회 🥉</span>
             </div>
         </div>
         <div class="avatar">
@@ -60,19 +60,19 @@
         <div class="status">
             <div class="status-bar" id="홍ㅇ주">
                 <span>홍*주님</span>
-                <span>2회 🥇</span>
+                <span>3회 🥈</span>
             </div>
         </div>
         <div class="avatar">
             <img class="avatar-pic"/>
-            <img class="crown" src="https://image.flaticon.com/icons/png/512/891/891024.png" />
+            <!-- <img class="crown" src="https://image.flaticon.com/icons/png/512/891/891024.png" /> -->
         </div>
     </div>
     <div class="player">
         <div class="status">
             <div class="status-bar" id="윤ㅅ영">
                 <span>윤*영님</span>
-                <span>2회 🥇</span>
+                <span>4회 🥇</span>
             </div>
         </div>
         <div class="avatar">
@@ -84,7 +84,7 @@
         <div class="status">
             <div class="status-bar" id="ㄷ올">
                 <span>*올님</span>
-                <span>1회 🥈</span>
+                <span>2회 🥉</span>
             </div>
         </div>
         <div class="avatar">
@@ -95,14 +95,90 @@
         <div class="status">
             <div class="status-bar" id="Joyce">
                 <span>Jo*ce님</span>
-                <span>1회 🥈</span>
+                <span>1회</span>
             </div>
         </div>
         <div class="avatar">
             <img class="avatar-pic"/>
         </div>
     </div> 
-
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="김ㄱ은">
+                <span>김*은님</span>
+                <span>1회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="백ㅎ선">
+                <span>백*선님</span>
+                <span>1회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="Back">
+                <span>Ba*k님</span>
+                <span>2회 🥉</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div>
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="패냐는슈ㄹ맘">
+                <span>패냐는슈*맘님</span>
+                <span>1회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="Poyeon">
+                <span>Poye*n님</span>
+                <span>3회 🥈</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="ㅈ영">
+                <span>*영님</span>
+                <span>1회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div>
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="문ㅎ민">
+                <span>문*민님</span>
+                <span>1회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
     <div class="copyright">
         <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>, <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a>, and <a href="https://www.flaticon.com/authors/dinosoftlabs" title="DinosoftLabs">DinosoftLabs</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
     </div>
