--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="status">
             <div class="status-bar" id="ㅎ정">
                 <span>*정님</span>
-                <span>1회</span>
+                <span>3회</span>
             </div>
         </div>
         <div class="avatar">
@@ -49,7 +49,7 @@
         <div class="status">
             <div class="status-bar" id="PMH">
                 <span>P*H님</span>
-                <span>2회 🥉</span>
+                <span>2회</span>
             </div>
         </div>
         <div class="avatar">
@@ -60,7 +60,7 @@
         <div class="status">
             <div class="status-bar" id="홍ㅇ주">
                 <span>홍*주님</span>
-                <span>3회 🥈</span>
+                <span>5회</span>
             </div>
         </div>
         <div class="avatar">
@@ -72,19 +72,18 @@
         <div class="status">
             <div class="status-bar" id="윤ㅅ영">
                 <span>윤*영님</span>
-                <span>4회 🥇</span>
+                <span>8회 🥈</span>
             </div>
         </div>
         <div class="avatar">
             <img class="avatar-pic"/>
-            <img class="crown" src="https://image.flaticon.com/icons/png/512/891/891024.png" />
         </div>
     </div>
     <div class="player">
         <div class="status">
             <div class="status-bar" id="ㄷ올">
                 <span>*올님</span>
-                <span>2회 🥉</span>
+                <span>2회</span>
             </div>
         </div>
         <div class="avatar">
@@ -95,7 +94,7 @@
         <div class="status">
             <div class="status-bar" id="Joyce">
                 <span>Jo*ce님</span>
-                <span>1회</span>
+                <span>3회</span>
             </div>
         </div>
         <div class="avatar">
@@ -117,7 +116,7 @@
         <div class="status">
             <div class="status-bar" id="백ㅎ선">
                 <span>백*선님</span>
-                <span>1회</span>
+                <span>2회</span>
             </div>
         </div>
         <div class="avatar">
@@ -128,7 +127,7 @@
         <div class="status">
             <div class="status-bar" id="Back">
                 <span>Ba*k님</span>
-                <span>2회 🥉</span>
+                <span>2회</span>
             </div>
         </div>
         <div class="avatar">
@@ -139,18 +138,19 @@
         <div class="status">
             <div class="status-bar" id="패냐는슈ㄹ맘">
                 <span>패냐는슈*맘님</span>
-                <span>1회</span>
+                <span>9회 🥇</span>
             </div>
         </div>
         <div class="avatar">
             <img class="avatar-pic"/>
+            <img class="crown" src="https://image.flaticon.com/icons/png/512/891/891024.png" />
         </div>
     </div> 
     <div class="player">
         <div class="status">
             <div class="status-bar" id="Poyeon">
                 <span>Poye*n님</span>
-                <span>3회 🥈</span>
+                <span>7회 🥉</span>
             </div>
         </div>
         <div class="avatar">
@@ -172,6 +172,105 @@
         <div class="status">
             <div class="status-bar" id="문ㅎ민">
                 <span>문*민님</span>
+                <span>3회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="구래수ㅌ챠">
+                <span>구래수*챠님</span>
+                <span>1회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div>
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="최ㅈ예">
+                <span>최*예님</span>
+                <span>1회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div>  
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="더칸ㄷ라">
+                <span>더칸*라님</span>
+                <span>3회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="홍ㅊ영">
+                <span>홍*영님</span>
+                <span>3회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="김ㅇ진">
+                <span>김*진님</span>
+                <span>3회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="ㅎ주">
+                <span>*주님</span>
+                <span>2회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="조ㅇ빈">
+                <span>조*빈님</span>
+                <span>3회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="김ㅎ나">
+                <span>김*나님</span>
+                <span>3회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="ㅅ란">
+                <span>*란님</span>
                 <span>1회</span>
             </div>
         </div>
@@ -179,6 +278,272 @@
             <img class="avatar-pic"/>
         </div>
     </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="이ㅈ은">
+                <span>이*은님</span>
+                <span>3회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="김ㅂ현">
+                <span>김*현님</span>
+                <span>1회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="L">
+                <span>L님</span>
+                <span>1회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="Shane">
+                <span>Sha*e님</span>
+                <span>3회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="KE">
+                <span>KE Lee님</span>
+                <span>3회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="미ㄴ꽃">
+                <span>미*꽃님</span>
+                <span>1회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="ㅅ은">
+                <span>*은님</span>
+                <span>1회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="심ㄱ원">
+                <span>심*원님</span>
+                <span>1회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="ㅎ진">
+                <span>*진님</span>
+                <span>1회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="ㄴ개">
+                <span>*개님</span>
+                <span>8회 🥈</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="최ㅇ정">
+                <span>최*정님</span>
+                <span>2회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="ㄷ송">
+                <span>*송님</span>
+                <span>2회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="송ㅎ조">
+                <span>송*조님</span>
+                <span>3회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="점점점">
+                <span>.*.님</span>
+                <span>3회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="김ㅅ희">
+                <span>김*희님</span>
+                <span>2회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="정ㅇ교">
+                <span>정*교님</span>
+                <span>3회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="쫑">
+                <span>쫑님</span>
+                <span>1회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="예ㅅ지">
+                <span>예*지님</span>
+                <span>2회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="강ㅅ연">
+                <span>강*연님</span>
+                <span>1회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="ㄴ나">
+                <span>*나님</span>
+                <span>1회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="점">
+                <span>.님</span>
+                <span>1회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="이ㅅ연">
+                <span>이*연님</span>
+                <span>2회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="김ㅎ나">
+                <span>김*나님</span>
+                <span>1회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="ㅅ연">
+                <span>*연님</span>
+                <span>3회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+
+
     <div class="copyright">
         <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>, <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a>, and <a href="https://www.flaticon.com/authors/dinosoftlabs" title="DinosoftLabs">DinosoftLabs</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
     </div>
