--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         </div>
         <div class="avatar">
             <img class="avatar-pic"/>
-            <img class="crown" src="https://image.flaticon.com/icons/png/512/891/891024.png" />
+            <!-- <img class="crown" src="https://image.flaticon.com/icons/png/512/891/891024.png" /> -->
         </div>
     </div> 
     <div class="player">
