--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="status">
             <div class="status-bar" id="PMH">
                 <span>P*H님</span>
-                <span>2회</span>
+                <span>3회</span>
             </div>
         </div>
         <div class="avatar">
@@ -60,7 +60,7 @@
         <div class="status">
             <div class="status-bar" id="홍ㅇ주">
                 <span>홍*주님</span>
-                <span>5회</span>
+                <span>6회</span>
             </div>
         </div>
         <div class="avatar">
@@ -72,7 +72,7 @@
         <div class="status">
             <div class="status-bar" id="윤ㅅ영">
                 <span>윤*영님</span>
-                <span>8회 🥈</span>
+                <span>10회 🥇</span>
             </div>
         </div>
         <div class="avatar">
@@ -116,7 +116,7 @@
         <div class="status">
             <div class="status-bar" id="백ㅎ선">
                 <span>백*선님</span>
-                <span>2회</span>
+                <span>3회</span>
             </div>
         </div>
         <div class="avatar">
@@ -138,7 +138,7 @@
         <div class="status">
             <div class="status-bar" id="패냐는슈ㄹ맘">
                 <span>패냐는슈*맘님</span>
-                <span>9회 🥇</span>
+                <span>9회 🥈</span>
             </div>
         </div>
         <div class="avatar">
@@ -150,7 +150,7 @@
         <div class="status">
             <div class="status-bar" id="Poyeon">
                 <span>Poye*n님</span>
-                <span>7회 🥉</span>
+                <span>8회 🥉</span>
             </div>
         </div>
         <div class="avatar">
@@ -172,7 +172,7 @@
         <div class="status">
             <div class="status-bar" id="문ㅎ민">
                 <span>문*민님</span>
-                <span>3회</span>
+                <span>6회</span>
             </div>
         </div>
         <div class="avatar">
@@ -183,7 +183,7 @@
         <div class="status">
             <div class="status-bar" id="구래수ㅌ챠">
                 <span>구래수*챠님</span>
-                <span>1회</span>
+                <span>3회</span>
             </div>
         </div>
         <div class="avatar">
@@ -194,7 +194,7 @@
         <div class="status">
             <div class="status-bar" id="최ㅈ예">
                 <span>최*예님</span>
-                <span>1회</span>
+                <span>2회</span>
             </div>
         </div>
         <div class="avatar">
@@ -227,7 +227,7 @@
         <div class="status">
             <div class="status-bar" id="김ㅇ진">
                 <span>김*진님</span>
-                <span>3회</span>
+                <span>5회</span>
             </div>
         </div>
         <div class="avatar">
@@ -260,7 +260,7 @@
         <div class="status">
             <div class="status-bar" id="김ㅎ나">
                 <span>김*나님</span>
-                <span>3회</span>
+                <span>5회</span>
             </div>
         </div>
         <div class="avatar">
@@ -359,7 +359,7 @@
         <div class="status">
             <div class="status-bar" id="심ㄱ원">
                 <span>심*원님</span>
-                <span>1회</span>
+                <span>2회</span>
             </div>
         </div>
         <div class="avatar">
@@ -381,7 +381,7 @@
         <div class="status">
             <div class="status-bar" id="ㄴ개">
                 <span>*개님</span>
-                <span>8회 🥈</span>
+                <span>10회 🥇</span>
             </div>
         </div>
         <div class="avatar">
@@ -458,7 +458,7 @@
         <div class="status">
             <div class="status-bar" id="쫑">
                 <span>쫑님</span>
-                <span>1회</span>
+                <span>3회</span>
             </div>
         </div>
         <div class="avatar">
@@ -469,7 +469,7 @@
         <div class="status">
             <div class="status-bar" id="예ㅅ지">
                 <span>예*지님</span>
-                <span>2회</span>
+                <span>4회</span>
             </div>
         </div>
         <div class="avatar">
@@ -491,7 +491,7 @@
         <div class="status">
             <div class="status-bar" id="ㄴ나">
                 <span>*나님</span>
-                <span>1회</span>
+                <span>3회</span>
             </div>
         </div>
         <div class="avatar">
@@ -502,7 +502,7 @@
         <div class="status">
             <div class="status-bar" id="점">
                 <span>.님</span>
-                <span>1회</span>
+                <span>3회</span>
             </div>
         </div>
         <div class="avatar">
@@ -536,6 +536,72 @@
             <div class="status-bar" id="ㅅ연">
                 <span>*연님</span>
                 <span>3회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="김ㅎ경">
+                <span>김*경님</span>
+                <span>3회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="최ㅈ훈">
+                <span>최*훈님</span>
+                <span>2회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="ㄱ정">
+                <span>*정님</span>
+                <span>2회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="한ㄷ미">
+                <span>한*미님</span>
+                <span>2회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="백ㅈ민">
+                <span>백*민님</span>
+                <span>2회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div> 
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="dana">
+                <span>da*a님</span>
+                <span>4회</span>
             </div>
         </div>
         <div class="avatar">
