--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="status">
             <div class="status-bar" id="홍ㅇ주">
                 <span>홍*주님</span>
-                <span>6회</span>
+                <span>7회</span>
             </div>
         </div>
         <div class="avatar">
@@ -72,7 +72,7 @@
         <div class="status">
             <div class="status-bar" id="윤ㅅ영">
                 <span>윤*영님</span>
-                <span>10회 🥇</span>
+                <span>10회 🥈</span>
             </div>
         </div>
         <div class="avatar">
@@ -83,7 +83,7 @@
         <div class="status">
             <div class="status-bar" id="ㄷ올">
                 <span>*올님</span>
-                <span>2회</span>
+                <span>3회</span>
             </div>
         </div>
         <div class="avatar">
@@ -116,7 +116,7 @@
         <div class="status">
             <div class="status-bar" id="백ㅎ선">
                 <span>백*선님</span>
-                <span>3회</span>
+                <span>5회</span>
             </div>
         </div>
         <div class="avatar">
@@ -138,7 +138,7 @@
         <div class="status">
             <div class="status-bar" id="패냐는슈ㄹ맘">
                 <span>패냐는슈*맘님</span>
-                <span>9회 🥈</span>
+                <span>12회 🥇</span>
             </div>
         </div>
         <div class="avatar">
@@ -227,7 +227,7 @@
         <div class="status">
             <div class="status-bar" id="김ㅇ진">
                 <span>김*진님</span>
-                <span>5회</span>
+                <span>6회</span>
             </div>
         </div>
         <div class="avatar">
@@ -238,7 +238,7 @@
         <div class="status">
             <div class="status-bar" id="ㅎ주">
                 <span>*주님</span>
-                <span>2회</span>
+                <span>3회</span>
             </div>
         </div>
         <div class="avatar">
@@ -249,7 +249,7 @@
         <div class="status">
             <div class="status-bar" id="조ㅇ빈">
                 <span>조*빈님</span>
-                <span>3회</span>
+                <span>4회</span>
             </div>
         </div>
         <div class="avatar">
@@ -282,7 +282,7 @@
         <div class="status">
             <div class="status-bar" id="이ㅈ은">
                 <span>이*은님</span>
-                <span>3회</span>
+                <span>7회</span>
             </div>
         </div>
         <div class="avatar">
@@ -348,7 +348,7 @@
         <div class="status">
             <div class="status-bar" id="ㅅ은">
                 <span>*은님</span>
-                <span>1회</span>
+                <span>4회</span>
             </div>
         </div>
         <div class="avatar">
@@ -359,7 +359,7 @@
         <div class="status">
             <div class="status-bar" id="심ㄱ원">
                 <span>심*원님</span>
-                <span>2회</span>
+                <span>3회</span>
             </div>
         </div>
         <div class="avatar">
@@ -381,7 +381,7 @@
         <div class="status">
             <div class="status-bar" id="ㄴ개">
                 <span>*개님</span>
-                <span>10회 🥇</span>
+                <span>12회 🥇</span>
             </div>
         </div>
         <div class="avatar">
@@ -403,7 +403,7 @@
         <div class="status">
             <div class="status-bar" id="ㄷ송">
                 <span>*송님</span>
-                <span>2회</span>
+                <span>3회</span>
             </div>
         </div>
         <div class="avatar">
@@ -414,7 +414,7 @@
         <div class="status">
             <div class="status-bar" id="송ㅎ조">
                 <span>송*조님</span>
-                <span>3회</span>
+                <span>6회</span>
             </div>
         </div>
         <div class="avatar">
@@ -425,7 +425,7 @@
         <div class="status">
             <div class="status-bar" id="점점점">
                 <span>.*.님</span>
-                <span>3회</span>
+                <span>4회</span>
             </div>
         </div>
         <div class="avatar">
@@ -469,7 +469,7 @@
         <div class="status">
             <div class="status-bar" id="예ㅅ지">
                 <span>예*지님</span>
-                <span>4회</span>
+                <span>5회</span>
             </div>
         </div>
         <div class="avatar">
@@ -502,7 +502,7 @@
         <div class="status">
             <div class="status-bar" id="점">
                 <span>.님</span>
-                <span>3회</span>
+                <span>4회</span>
             </div>
         </div>
         <div class="avatar">
@@ -546,7 +546,7 @@
         <div class="status">
             <div class="status-bar" id="김ㅎ경">
                 <span>김*경님</span>
-                <span>3회</span>
+                <span>5회</span>
             </div>
         </div>
         <div class="avatar">
@@ -557,7 +557,7 @@
         <div class="status">
             <div class="status-bar" id="최ㅈ훈">
                 <span>최*훈님</span>
-                <span>2회</span>
+                <span>3회</span>
             </div>
         </div>
         <div class="avatar">
@@ -568,7 +568,7 @@
         <div class="status">
             <div class="status-bar" id="ㄱ정">
                 <span>*정님</span>
-                <span>2회</span>
+                <span>3회</span>
             </div>
         </div>
         <div class="avatar">
@@ -601,7 +601,84 @@
         <div class="status">
             <div class="status-bar" id="dana">
                 <span>da*a님</span>
-                <span>4회</span>
+                <span>6회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div>
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="danb">
+                <span>da*b님</span>
+                <span>1회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div>
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="정ㅅ영">
+                <span>정*영님</span>
+                <span>1회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div>
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="Ines">
+                <span>In*s님</span>
+                <span>1회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div>
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="김ㄷ은">
+                <span>김*은님</span>
+                <span>3회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div>
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="정ㄷ진">
+                <span>정*진님</span>
+                <span>1회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div>
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="김ㅁ선">
+                <span>김*선님</span>
+                <span>1회</span>
+            </div>
+        </div>
+        <div class="avatar">
+            <img class="avatar-pic"/>
+        </div>
+    </div>
+    <div class="player">
+        <div class="status">
+            <div class="status-bar" id="Hyejung">
+                <span>Hyeju*g님</span>
+                <span>3회</span>
             </div>
         </div>
         <div class="avatar">
